force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/FACT_JDE_Order_Inquiry__c.object-meta.xml
<CustomObject>
    <label>JDE Order Inquiry</label>
    <nameField>
        <displayFormat>JDE-OI-{00000000}</displayFormat>
        <label>JDE Order Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JDE Order Inquiry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>