force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_ACN__c</fullName>
    <inlineHelpText>SDAN8</inlineHelpText>
    <label>ACN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>