force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_ACN_Corrected__c.field-meta.xml
<CustomField>
    <fullName>FACT_ACN_Corrected__c</fullName>
    <formula>if(LEN(FACT_ACN__c)==10,FACT_ACN__c,
 if(LEN(FACT_ACN__c)==9,&quot;0&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==8,&quot;00&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==7,&quot;000&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==6,&quot;0000&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==5,&quot;00000&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==4,&quot;000000&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==3,&quot;0000000&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==2,&quot;00000000&quot;&amp;FACT_ACN__c,
 if(LEN(FACT_ACN__c)==1,&quot;000000000&quot;&amp;FACT_ACN__c,&quot;&quot;))))))))))</formula>
    <label>ACN#</label>
    <type>Text</type>
</CustomField>