force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_Document_Line_Last_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Document_Line_Last_Status__c</fullName>
    <description>SDLTTR</description>
    <inlineHelpText>SDLTTR</inlineHelpText>
    <label>Document Line Last Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>