force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_Document_Line_Next_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Document_Line_Next_Status__c</fullName>
    <description>SDNXTR</description>
    <inlineHelpText>SDNXTR</inlineHelpText>
    <label>Document Line Next Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>