force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_Document_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Document_Line_Number__c</fullName>
    <description>SDLNID</description>
    <inlineHelpText>SDLNID</inlineHelpText>
    <label>Document Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>