force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Document_Number__c</fullName>
    <description>SDDOCO</description>
    <inlineHelpText>SDDOCO</inlineHelpText>
    <label>Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>