force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>FACT_Line_Type__c</fullName>
    <description>SDLNTY</description>
    <inlineHelpText>SDLNTY</inlineHelpText>
    <label>Line Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>