force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number__c</fullName>
    <description>SDLOTN</description>
    <inlineHelpText>SDLOTN</inlineHelpText>
    <label>Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>