force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/fields/FACT_Serial_Number_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number_ACN__c</fullName>
    <description>FACT_Serial_Number_corrected__c+&#39;-&#39;+FACT_ACN_Corrected__c</description>
    <formula>FACT_Serial_Number_corrected__c+&#39;-&#39;+FACT_ACN_Corrected__c</formula>
    <label>Serial Number-ACN</label>
    <type>Text</type>
</CustomField>