force-app/main/default/objects/FACT_JDE_Order_Inquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FACT_Serial_Number_ACN__c</columns>
    <columns>FACT_Serial_Number__c</columns>
    <columns>FACT_ACN__c</columns>
    <columns>FACT_ACN_Corrected__c</columns>
    <columns>FACT_Chain_ACN__c</columns>
    <columns>FACT_Document_Number__c</columns>
    <columns>FACT_Document_Line_Number__c</columns>
    <columns>FACT_Chain_ACN_Corrected__c</columns>
    <columns>FACT_Document_Line_Last_Status__c</columns>
    <columns>FACT_Document_Line_Next_Status__c</columns>
    <columns>FACT_Line_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>